tests/NormalTests/paczka1/fuzzy1/69942640.err
Error in line 14: A498 A881 62,4
Error in line 16: A498 A498 14,8
Error in line 29: kgFhU5 S272 5,8
Error in line 36: A498 A150 7,4
